# workbotv2

./: .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  handlers.py  logging_settings.py  main.py  main_menu.py  pyproject.toml  start_handler.py
alembic/: env.py
alembic/versions/: 155c74f8a64b_create_other_basic_tables.py  5ed324498436_changed_classes_model.py  61edd98378f4_changed_tests_model.py  696e922638b1_added_sub_to_notifications_for_lessons.py  6e25eed50078_changed_tests_model.py  8bff1d233f66_changed_students_model.py  e82058b53489_added_sub_to_notifications_for_deadlines.py  edcc8a08b5f0_changed_courses_and_classes_model.py  faaae936f092_create_courses_table.py
db/: models.py  requests.py  views.py
dialogs/: admin_dialog.py  auth_dialog.py  dialogs.py  getters.py  handlers.py  schedule_dialog.py  send_work_dialog.py  settings_dialog.py  setup.py  soon_dialog.py  start_dialog.py  states.py  utils.py
middlewares/: middlewares.py
services/: google_services.py  scheduler_service.py
services/nats_service/: consumer.py  nats_connect.py  publisher.py  storage.py
utils/: utils.py
