[tool.poetry]
name = "workbotv2"
version = "0.1.0"
description = ""
authors = ["beetlejaws <pavelsarych@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
environs = "^14.2.0"
asyncio = "^3.4.3"
aiogram = "^3.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
